Use empty async result templates in table demo

--- a/src/app/filter-table/filter-table.component.html
+++ b/src/app/filter-table/filter-table.component.html
@@ -16,6 +16,9 @@
     </ppw-search-filter>
 }
 <ppw-async-result [asyncResult]="players$ | async" [pending]="pending$ | async">
+    <ng-template ppw-async-result-empty>
+        <p>No result</p>
+    </ng-template>
     <ng-template ppw-async-result-success let-players>
         <mat-card>
             <mat-card-content>
