Support full-width title or description in the expandable card header

--- a/projects/ppwcode/ng-common-components/src/lib/expandable-card/expandable-card.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/expandable-card/expandable-card.component.html
@@ -7,14 +7,14 @@
         (closed)="panelOpenState = canBeCollapsed"
     >
         <mat-expansion-panel-header class="ppw-expandable-panel-header">
-            <mat-panel-title>
+            <mat-panel-title class="ppw-expandable-card-title">
                 @if (cardTitle) {
                     {{ cardTitle }}
                 } @else {
                     <ng-content select="[ppw-expandable-card-title]"> </ng-content>
                 }
             </mat-panel-title>
-            <mat-panel-description>
+            <mat-panel-description class="ppw-expandable-card-description">
                 @if (cardDescription) {
                     {{ cardDescription }}
                 } @else {
