--- a/projects/ppwcode/ng-common-components/src/lib/expandable-card/expandable-card.component.theme.scss
+++ b/projects/ppwcode/ng-common-components/src/lib/expandable-card/expandable-card.component.theme.scss
@@ -2,4 +2,6 @@
     --ppw-expandable-card-header-background-color: var(--mat-expansion-header-background-color);
     --ppw-expandable-card-header-text-color: var(--mat-expansion-header-text-color);
     --ppw-expandable-card-header-indicator-color: var(--mat-expansion-header-indicator-color);
+    --ppw-expandable-card-header-height-collapsed: 32px;
+    --ppw-expandable-card-header-height-expanded: 32px;
 }
