Use CSS variables for the header height in expandable card demo

--- a/src/app/expandable-card/expandable-card-demo.component.html
+++ b/src/app/expandable-card/expandable-card-demo.component.html
@@ -45,3 +45,13 @@
 >
     <div>card contents</div>
 </ppw-expandable-card>
+
+<ppw-expandable-card class="specific-heights-card">
+    <div ppw-expandable-card-title>
+        <span>Demo card which can be collapsed and has a specific height</span>
+    </div>
+    <div ppw-expandable-card-description class="flex-grow-1 flex-row justify-content-end">
+        <span>Description as content</span>
+    </div>
+    <div>card contents</div>
+</ppw-expandable-card>
