--- a/projects/ppwcode/ng-common-components/src/lib/message-bar/message-bar.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/message-bar/message-bar.component.html
@@ -1,5 +1,9 @@
 <mat-card class="ppw-message-bar ppw-message-severity-{{ severity }}">
     <mat-card-content class="ppw-message-bar-content">
-        {{ message }}
+        @if (message === null) {
+            <ng-content></ng-content>
+        } @else {
+            {{ message }}
+        }
     </mat-card-content>
 </mat-card>
