Fix default success message text contrast

--- a/projects/ppwcode/ng-common-components/src/lib/message-bar/message-bar.component.scss
+++ b/projects/ppwcode/ng-common-components/src/lib/message-bar/message-bar.component.scss
@@ -17,7 +17,7 @@
 
 .ppw-message-severity-success {
     background-color: var(--ppw-message-bar-success-background-color, #009944);
-    color: var(--ppw-message-bar-success-text-color, black);
+    color: var(--ppw-message-bar-success-text-color, white);
 }
 
 .ppw-message-severity-error {
