Support hiding side nav when there are no navigation items to show

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     [navigationItems]="getNavigationItems()"
     [sidebarOptions]="sidebarOptions"
     [toolbarHeightPx]="toolbarHeightPx"
+    [hideSidenavWhenNoNavigationItems]="true"
 >
     @if (showToolbarLogo) {
         <ng-container ppw-toolbar-left-content>
