--- a/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
@@ -1,5 +1,5 @@
 <mat-drawer-container class="ppw-app-wireframe-container">
-    @if (showWireframe) {
+    @if (showWireframe && !forceHiddenSidenav) {
         <mat-drawer
             [disableClose]="true"
             [mode]="sidenavMode"
@@ -39,9 +39,10 @@
                     [showPageTitle]="!!sidebarOptions?.showPageTitle"
                     [toolbarHeightPx]="toolbarHeightPx"
                     [showMenuToggle]="
-                        !!sidebarOptions?.closedByDefaultOnLargerDevice ||
-                        (!sidebarOptions?.closedByDefaultOnLargerDevice &&
-                            (isSmallDevice || (!sidebarIsOpen && !isLargerDevice)))
+                        !forceHiddenSidenav &&
+                        (!!sidebarOptions?.closedByDefaultOnLargerDevice ||
+                            (!sidebarOptions?.closedByDefaultOnLargerDevice &&
+                                (isSmallDevice || (!sidebarIsOpen && !isLargerDevice))))
                     "
                 >
                     <ng-container ppw-toolbar-left-content
