--- a/src/app/expandable-card/expandable-card-demo.component.html
+++ b/src/app/expandable-card/expandable-card-demo.component.html
@@ -18,7 +18,7 @@
     <div>card contents</div>
 </ppw-expandable-card>
 <ppw-expandable-card>
-    <div>this is a card with a title or description in the header</div>
+    <div>this is a card without a title or description in the header</div>
 </ppw-expandable-card>
 
 <ppw-expandable-card [openAsExpanded]="false">
