--- a/projects/ppwcode/ng-common-components/src/lib/message-bar/message-bar.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/message-bar/message-bar.component.html
@@ -1,9 +1,9 @@
-<mat-card class="ppw-message-bar ppw-message-severity-{{ severity }}">
+<mat-card class="ppw-message-bar ppw-message-severity-{{ severity() }}">
     <mat-card-content class="ppw-message-bar-content">
-        @if (message === null) {
+        @if (message() === null) {
             <ng-content></ng-content>
         } @else {
-            {{ message }}
+            {{ message() }}
         }
     </mat-card-content>
 </mat-card>
