--- a/projects/ppwcode/ng-wireframe/src/lib/left-sidenav/left-sidenav.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/left-sidenav/left-sidenav.component.html
@@ -1,4 +1,4 @@
-@if (showMenuCloseButton) {
+@if (showMenuCloseButton()) {
     <button class="ppw-sidenav-close-button" (click)="closeSidebar.emit()">
         <mat-icon>close</mat-icon>
     </button>
@@ -6,16 +6,16 @@
 
 <div class="ppw-sidenav-content-wrapper">
     <div class="ppw-sidenav-top-content-wrapper">
-        @if (logoUrl) {
-            <div class="flex-column logo-wrapper" [ngClass]="{ 'align-items-center': centerLogo }">
-                <img [ngSrc]="logoUrl" alt="Logo" [height]="logoHeight" [width]="logoWidth" priority="eager" />
+        @if (logoUrl()) {
+            <div class="flex-column logo-wrapper" [ngClass]="{ 'align-items-center': centerLogo() }">
+                <img [ngSrc]="logoUrl()!" alt="Logo" [height]="logoHeight()" [width]="logoWidth()" priority="eager" />
             </div>
         }
         <div class="ppw-sidenav-top-content">
             <ng-content select="[ppw-sidebar-top]"></ng-content>
         </div>
         <div class="ppw-sidenav-navigation-wrapper flex-column">
-            @for (navigationItem of navigationItems; track navigationItem) {
+            @for (navigationItem of navigationItems(); track navigationItem) {
                 <ng-container *ngTemplateOutlet="navigationItemTemplate; context: { navigationItem }"></ng-container>
             }
         </div>
