feat(wireframe): convert pagination bar to use signal inputs and outputs

--- a/projects/ppwcode/ng-wireframe/src/lib/pagination-bar/pagination-bar.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/pagination-bar/pagination-bar.component.html
@@ -1,11 +1,10 @@
 <mat-paginator
-    #paginator
     (page)="handlePageEvent($event)"
-    [length]="pagedAsyncResult.entity.totalCount"
-    [pageSize]="pagedAsyncResult.entity.pageSize"
-    [pageIndex]="pagedAsyncResult.entity.pageIndex - 1"
-    [pageSizeOptions]="pageSizeOptions"
-    [showFirstLastButtons]="showFirstLastButtons"
-    [hidePageSize]="hidePageSize"
+    [length]="pagedAsyncResult().entity.totalCount"
+    [pageSize]="pagedAsyncResult().entity.pageSize"
+    [pageIndex]="pagedAsyncResult().entity.pageIndex - 1"
+    [pageSizeOptions]="pageSizeOptions()"
+    [showFirstLastButtons]="showFirstLastButtons()"
+    [hidePageSize]="hidePageSize()"
 >
 </mat-paginator>
