feat(wireframe): support passing PagedEntities directly to pagination bar

--- a/projects/ppwcode/ng-wireframe/src/lib/pagination-bar/pagination-bar.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/pagination-bar/pagination-bar.component.html
@@ -1,8 +1,8 @@
 <mat-paginator
     (page)="handlePageEvent($event)"
-    [length]="pagedAsyncResult().entity.totalCount"
-    [pageSize]="pagedAsyncResult().entity.pageSize"
-    [pageIndex]="pagedAsyncResult().entity.pageIndex - 1"
+    [length]="entity().totalCount"
+    [pageSize]="entity().pageSize"
+    [pageIndex]="entity().pageIndex - 1"
     [pageSizeOptions]="pageSizeOptions()"
     [showFirstLastButtons]="showFirstLastButtons()"
     [hidePageSize]="hidePageSize()"
