feat(wireframe): convert toolbar title into signal instead of ngOnInit subscription

--- a/projects/ppwcode/ng-wireframe/src/lib/toolbar/toolbar.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/toolbar/toolbar.component.html
@@ -10,8 +10,8 @@
             </button>
         }
         <ng-content select="[ppw-toolbar-left-content]"></ng-content>
-        @if (showPageTitle() && title) {
-            <span class="ppw-toolbar-page-title">{{ title }}</span>
+        @if (showPageTitle() && title()) {
+            <span class="ppw-toolbar-page-title">{{ title() }}</span>
         }
     </div>
     <div class="ppw-toolbar-right-section padding-8">
