Update the example app to make use of the mixinResponsiveObservers

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,9 @@
     }
     <ng-container ppw-toolbar-right-content>
         <mat-icon>person</mat-icon>
+        @if ((isSmallScreen$ | async) === false) {
+            <span>Username</span>
+        }
     </ng-container>
     <ng-container ppw-sidebar-top-content></ng-container>
     <ng-container ppw-sidebar-bottom-content>
