Avoid borders on focussed drawer buttons

--- a/projects/ppwcode/ng-wireframe/src/lib/left-sidenav/left-sidenav.component.scss
+++ b/projects/ppwcode/ng-wireframe/src/lib/left-sidenav/left-sidenav.component.scss
@@ -48,6 +48,10 @@
         cursor: pointer;
         background-color: rgba(black, 4%); /* same as #F5F5F5 */
     }
+
+    &:focus-visible {
+        outline: unset;
+    }
 }
 
 .ppw-sidenav-navigation-item {
