Allow closing the drawer with the escape key or by clicking next to it when the drawer is closed by default on a larger device

--- a/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
@@ -1,7 +1,7 @@
 <mat-drawer-container class="ppw-app-wireframe-container">
     @if (showWireframe() && !forceHiddenSidenav()) {
         <mat-drawer
-            [disableClose]="true"
+            [disableClose]="!sidebarOptions()?.closedByDefaultOnLargerDevice"
             [mode]="sidenavMode()"
             [ngClass]="
                 isXSmallDevice() || !!sidebarOptions()?.closedByDefaultOnLargerDevice ? 'drawer-full-width' : 'drawer'
