--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,22 +43,22 @@ $ppw-primary-palette: (
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$ppw-ui-primary: mat.define-palette($ppw-primary-palette);
-$ppw-ui-accent: mat.define-palette(mat.$blue-palette, 200, 100, 400);
+$ppw-ui-primary: mat.m2-define-palette($ppw-primary-palette);
+$ppw-ui-accent: mat.m2-define-palette(mat.$m2-blue-palette, 200, 100, 400);
 
 // The warn palette is optional (defaults to red).
-$ppw-ui-warn: mat.define-palette(mat.$red-palette);
+$ppw-ui-warn: mat.m2-define-palette(mat.$m2-red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$ppw-ui-theme: mat.define-light-theme(
+$ppw-ui-theme: mat.m2-define-light-theme(
     (
         color: (
             primary: $ppw-ui-primary,
             accent: $ppw-ui-accent,
             warn: $ppw-ui-warn
         ),
-        typography: mat.define-typography-config()
+        typography: mat.m2-define-typography-config()
     )
 );
 
@@ -83,8 +83,8 @@ body {
 
     --ppw-app-wireframe-drawer-width: 250px;
 
-    --ppw-confirmation-dialog-header-background-color: #{mat.get-color-from-palette($ppw-primary-palette, 500)};
-    --ppw-confirmation-dialog-header-text-color: #{mat.get-contrast-color-from-palette($ppw-primary-palette, 500)};
+    --ppw-confirmation-dialog-header-background-color: #{mat.m2-get-color-from-palette($ppw-primary-palette, 500)};
+    --ppw-confirmation-dialog-header-text-color: #{mat.m2-get-contrast-color-from-palette($ppw-primary-palette, 500)};
 
     --ppw-expandable-card-header-text-color: white;
     --ppw-expandable-card-header-background-color: #6eb343;
@@ -179,7 +179,7 @@ body {
 }
 
 mat-card.highlighted-card {
-    background-color: mat.get-color-from-palette($ppw-ui-accent);
+    background-color: mat.m2-get-color-from-palette($ppw-ui-accent);
 }
 
 .ppw-table-container::-webkit-scrollbar {
@@ -191,7 +191,7 @@ mat-card.highlighted-card {
 
 .ppw-table-container::-webkit-scrollbar-thumb {
     border-radius: 5px;
-    background-color: mat.get-color-from-palette($ppw-ui-primary);
+    background-color: mat.m2-get-color-from-palette($ppw-ui-primary);
 }
 
 .ppw-table-container::-webkit-scrollbar-button,
